# asx-financials-scraper

./: .dockerignore  .env.example  .env.production.example  .gcloudignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.run/: ASX Financials API.run.xml
alembic/: env.py
alembic/versions/: 20260424_0001_initial_schema.py
scripts/: bootstrap-gcp.ps1  bootstrap-gcp.sh  deploy-gcloud.ps1  deploy-gcloud.sh  gcloud-tail.sh  grant-gcp-deploy-access.ps1  grant-gcp-deploy-access.sh
skills/gcloud/: SKILL.md
skills/gcloud/agents/: openai.yaml
skills/mongodb/: SKILL.md
skills/mongodb/agents/: openai.yaml
src/asx_financials/: __init__.py  cli.py  config.py
src/asx_financials/api/: app.py
src/asx_financials/application/: interfaces.py  services.py
src/asx_financials/domain/: enums.py  models.py  value_objects.py
src/asx_financials/infrastructure/persistence/: database.py  models.py  store.py
src/asx_financials/infrastructure/providers/: __init__.py  asx_listed_companies_provider.py  yfinance_provider.py
tests/: test_api.py  test_asx_listed_companies_provider.py  test_ingestion_service.py  test_value_objects.py  test_yfinance_provider.py
